log
Wed 22 Mar 2023 02:58:36 PM UTC: 
 list.c | 72 ++++++++++++++++++++++++++++++++++++++++++++++++++----------------
 1 file changed, 55 insertions(+), 17 deletions(-)
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccnidm61.o: in function `pushCurrent':
test.c:(.text+0x175): undefined reference to `pushBack'
collect2: error: ld returned 1 exit status
Compilation failed
2ae3b75
Wed 22 Mar 2023 03:00:38 PM UTC: 
 list.c | 62 ++++++++++++++++----------------------------------------------
 1 file changed, 16 insertions(+), 46 deletions(-)
 tests:  2|5
total_score: 15/70
4bcd4bb
Wed 22 Mar 2023 03:01:09 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  5|4
total_score: 25/70
7add322
Wed 22 Mar 2023 03:01:39 PM UTC: 
 list.c | 60 +++++++++++++++++++++++++++++++++++++++++++-----------------
 1 file changed, 43 insertions(+), 17 deletions(-)
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccUu8XSY.o: in function `pushCurrent':
test.c:(.text+0x175): undefined reference to `pushBack'
collect2: error: ld returned 1 exit status
Compilation failed
9f00e24
Wed 22 Mar 2023 03:06:31 PM UTC: 
 list.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  12|0
total_score: 70/70
3efe6ba
Thu 23 Mar 2023 08:50:59 PM UTC: 
 list.c | 82 ++++++++++++++----------------------------------------------------
 1 file changed, 17 insertions(+), 65 deletions(-)
 tests:  0|6
total_score: 0/70
ab093ab
Thu 23 Mar 2023 09:06:52 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e86953c
Thu 23 Mar 2023 09:12:40 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  1|5
total_score: 10/70
053de35
Thu 23 Mar 2023 09:13:09 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
06283fd
Thu 23 Mar 2023 09:13:45 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
3178e31
Thu 23 Mar 2023 09:15:52 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
004ddcd
Thu 23 Mar 2023 09:16:13 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b387b8c
Thu 23 Mar 2023 09:17:57 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
34d7bda
Thu 23 Mar 2023 09:20:51 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
dcfc73a
Thu 23 Mar 2023 09:22:50 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
8974398
Thu 23 Mar 2023 09:23:14 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
3c96605
Thu 23 Mar 2023 09:51:37 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  9|3
total_score: 35/70
aac7511
Thu 23 Mar 2023 09:52:17 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
da809bb
Thu 23 Mar 2023 09:55:02 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  9|3
total_score: 35/70
4c3140b
Thu 23 Mar 2023 11:50:29 PM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c:73:1: error: expected identifier or ‘(’ before ‘}’ token
   73 | }
      | ^
Compilation failed
43ad85d
Thu 23 Mar 2023 11:50:45 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7d2fe47
Thu 23 Mar 2023 11:51:07 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
b57b1ee
Thu 23 Mar 2023 11:55:10 PM UTC: 
 list.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  10|2
total_score: 45/70
28b7c3e
Fri 24 Mar 2023 12:49:14 AM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  10|2
total_score: 45/70
dacf9ef
Fri 24 Mar 2023 05:29:20 PM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  10|2
total_score: 45/70
43dbb7e
Fri 24 Mar 2023 05:29:53 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
3515fc8
Fri 24 Mar 2023 05:39:26 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
51af6e1
Fri 24 Mar 2023 05:44:27 PM UTC: 
 list.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
 tests:  10|2
total_score: 45/70
c1cbbb2
Fri 24 Mar 2023 05:56:52 PM UTC: 
 list.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
375becb
Fri 24 Mar 2023 05:59:20 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  10|2
total_score: 45/70
df96a74
Fri 24 Mar 2023 05:59:49 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
b9a695b
Fri 24 Mar 2023 06:07:17 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
a079253
Fri 24 Mar 2023 06:09:35 PM UTC: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  10|2
total_score: 45/70
83eb855
Fri 24 Mar 2023 06:10:58 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
74289d3
Fri 24 Mar 2023 06:16:36 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
f8dff38
Fri 24 Mar 2023 06:25:42 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
199e2a7
Fri 24 Mar 2023 06:26:33 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  11|1
total_score: 55/70
8703fb2
Fri 24 Mar 2023 06:26:49 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  10|2
total_score: 45/70
6aa46be
Fri 24 Mar 2023 06:28:22 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 55/70
db2fc67
Fri 24 Mar 2023 06:30:33 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
2745b5e
Fri 24 Mar 2023 10:02:19 PM UTC: 
 list.c | 22 +++++++++++++++-------
 1 file changed, 15 insertions(+), 7 deletions(-)
In file included from test.c:5:
list.c: In function ‘popBack’:
list.c:125:1: error: control reaches end of non-void function [-Werror=return-type]
  125 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b318646
Fri 24 Mar 2023 10:02:42 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
58ec1a0
Fri 24 Mar 2023 10:04:14 PM UTC: 
 list.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
9e7f971
Fri 24 Mar 2023 10:10:18 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|0
74729b2
Fri 24 Mar 2023 10:12:48 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
89b4a21
Fri 24 Mar 2023 10:13:04 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d0b818b
Fri 24 Mar 2023 10:14:13 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
0ffa803
